// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL operation coverage > separates declared mutation gaps from unregistered introspected mutation roots 1`] = `
{
  "declaredGaps": [
    "appPurchaseOneTimeCreate",
    "appRevokeAccessScopes",
    "appSubscriptionCancel",
    "appSubscriptionCreate",
    "appSubscriptionLineItemUpdate",
    "appSubscriptionTrialExtend",
    "appUninstall",
    "appUsageRecordCreate",
    "bulkOperationRunMutation",
    "bulkOperationRunQuery",
    "bulkProductResourceFeedbackCreate",
    "combinedListingUpdate",
    "companiesDelete",
    "companyAddressDelete",
    "companyAssignCustomerAsContact",
    "companyAssignMainContact",
    "companyContactAssignRole",
    "companyContactAssignRoles",
    "companyContactCreate",
    "companyContactDelete",
    "companyContactRemoveFromCompany",
    "companyContactRevokeRole",
    "companyContactRevokeRoles",
    "companyContactsDelete",
    "companyContactSendWelcomeEmail",
    "companyContactUpdate",
    "companyCreate",
    "companyDelete",
    "companyLocationAssignAddress",
    "companyLocationAssignRoles",
    "companyLocationAssignStaffMembers",
    "companyLocationCreate",
    "companyLocationDelete",
    "companyLocationRemoveStaffMembers",
    "companyLocationRevokeRoles",
    "companyLocationsDelete",
    "companyLocationTaxSettingsUpdate",
    "companyLocationUpdate",
    "companyRevokeMainContact",
    "companyUpdate",
    "consentPolicyUpdate",
    "customerPaymentMethodCreateFromDuplicationData",
    "customerPaymentMethodCreditCardCreate",
    "customerPaymentMethodCreditCardUpdate",
    "customerPaymentMethodGetDuplicationData",
    "customerPaymentMethodGetUpdateUrl",
    "customerPaymentMethodPaypalBillingAgreementCreate",
    "customerPaymentMethodPaypalBillingAgreementUpdate",
    "customerPaymentMethodRemoteCreate",
    "customerPaymentMethodRevoke",
    "delegateAccessTokenCreate",
    "delegateAccessTokenDestroy",
    "discountAutomaticAppCreate",
    "discountAutomaticAppUpdate",
    "discountAutomaticBulkDelete",
    "discountCodeAppCreate",
    "discountCodeAppUpdate",
    "discountCodeBulkActivate",
    "discountCodeBulkDeactivate",
    "discountCodeBulkDelete",
    "discountCodeRedeemCodeBulkDelete",
    "discountRedeemCodeBulkAdd",
    "disputeEvidenceUpdate",
    "eventBridgeServerPixelUpdate",
    "fileAcknowledgeUpdateFailed",
    "flowGenerateSignature",
    "flowTriggerReceive",
    "fulfillmentOrderClose",
    "fulfillmentOrderLineItemsPreparedForPickup",
    "fulfillmentOrderMerge",
    "fulfillmentOrderReschedule",
    "fulfillmentOrderSplit",
    "fulfillmentOrdersSetFulfillmentDeadline",
    "marketingActivityCreate",
    "marketingActivityUpdate",
    "menuCreate",
    "menuDelete",
    "menuUpdate",
    "mobilePlatformApplicationCreate",
    "mobilePlatformApplicationDelete",
    "mobilePlatformApplicationUpdate",
    "orderEditAddShippingLine",
    "orderEditRemoveShippingLine",
    "orderEditUpdateShippingLine",
    "orderRiskAssessmentCreate",
    "paymentReminderSend",
    "paymentTermsCreate",
    "paymentTermsDelete",
    "paymentTermsUpdate",
    "privacyFeaturesDisable",
    "productBundleCreate",
    "productBundleUpdate",
    "productFeedCreate",
    "productFeedDelete",
    "productFullSync",
    "productOptionsReorder",
    "pubSubServerPixelUpdate",
    "removeFromReturn",
    "returnProcess",
    "reverseDeliveryCreateWithShipping",
    "reverseDeliveryShippingUpdate",
    "reverseFulfillmentOrderDispose",
    "scriptTagCreate",
    "scriptTagDelete",
    "scriptTagUpdate",
    "serverPixelCreate",
    "serverPixelDelete",
    "shopifyPaymentsPayoutAlternateCurrencyCreate",
    "shopResourceFeedbackCreate",
    "storefrontAccessTokenCreate",
    "storefrontAccessTokenDelete",
    "themeCreate",
    "themeDelete",
    "themeFilesCopy",
    "themeFilesDelete",
    "themeFilesUpsert",
    "themePublish",
    "themeUpdate",
    "webPixelCreate",
    "webPixelDelete",
    "webPixelUpdate",
    "webPresenceDelete",
  ],
  "unregistered": [
    "backupRegionUpdate",
    "collectionAddProductsV2",
    "deliveryCustomizationActivation",
    "deliveryCustomizationCreate",
    "deliveryCustomizationDelete",
    "deliveryCustomizationUpdate",
    "deliveryPromiseParticipantsUpdate",
    "deliveryPromiseProviderUpsert",
    "deliverySettingUpdate",
    "fulfillmentConstraintRuleCreate",
    "fulfillmentConstraintRuleDelete",
    "fulfillmentConstraintRuleUpdate",
    "inventoryTransferCancel",
    "inventoryTransferCreate",
    "inventoryTransferCreateAsReadyToShip",
    "inventoryTransferDelete",
    "inventoryTransferDuplicate",
    "inventoryTransferEdit",
    "inventoryTransferMarkAsReadyToShip",
    "inventoryTransferRemoveItems",
    "inventoryTransferSetItems",
    "locationLocalPickupDisable",
    "locationLocalPickupEnable",
    "orderDelete",
    "orderEditAddCustomItem",
    "orderEditAddLineItemDiscount",
    "orderEditRemoveDiscount",
    "orderEditUpdateDiscount",
    "productJoinSellingPlanGroups",
    "productLeaveSellingPlanGroups",
    "productVariantAppendMedia",
    "productVariantDetachMedia",
    "productVariantJoinSellingPlanGroups",
    "productVariantLeaveSellingPlanGroups",
    "productVariantRelationshipBulkUpdate",
    "returnApproveRequest",
    "returnDeclineRequest",
    "savedSearchCreate",
    "savedSearchDelete",
    "savedSearchUpdate",
    "sellingPlanGroupAddProducts",
    "sellingPlanGroupAddProductVariants",
    "sellingPlanGroupCreate",
    "sellingPlanGroupDelete",
    "sellingPlanGroupRemoveProducts",
    "sellingPlanGroupRemoveProductVariants",
    "sellingPlanGroupUpdate",
    "shippingPackageDelete",
    "shippingPackageMakeDefault",
    "shippingPackageUpdate",
    "subscriptionBillingAttemptCreate",
    "subscriptionBillingCycleBulkCharge",
    "subscriptionBillingCycleBulkSearch",
    "subscriptionBillingCycleCharge",
    "subscriptionBillingCycleContractDraftCommit",
    "subscriptionBillingCycleContractDraftConcatenate",
    "subscriptionBillingCycleContractEdit",
    "subscriptionBillingCycleEditDelete",
    "subscriptionBillingCycleEditsDelete",
    "subscriptionBillingCycleScheduleEdit",
    "subscriptionBillingCycleSkip",
    "subscriptionBillingCycleUnskip",
    "subscriptionContractActivate",
    "subscriptionContractAtomicCreate",
    "subscriptionContractCancel",
    "subscriptionContractCreate",
    "subscriptionContractExpire",
    "subscriptionContractFail",
    "subscriptionContractPause",
    "subscriptionContractProductChange",
    "subscriptionContractSetNextBillingDate",
    "subscriptionContractUpdate",
    "subscriptionDraftCommit",
    "subscriptionDraftDiscountAdd",
    "subscriptionDraftDiscountCodeApply",
    "subscriptionDraftDiscountRemove",
    "subscriptionDraftDiscountUpdate",
    "subscriptionDraftFreeShippingDiscountAdd",
    "subscriptionDraftFreeShippingDiscountUpdate",
    "subscriptionDraftLineAdd",
    "subscriptionDraftLineRemove",
    "subscriptionDraftLineUpdate",
    "subscriptionDraftUpdate",
    "urlRedirectBulkDeleteAll",
    "urlRedirectBulkDeleteByIds",
    "urlRedirectBulkDeleteBySavedSearch",
    "urlRedirectBulkDeleteBySearch",
    "urlRedirectCreate",
    "urlRedirectDelete",
    "urlRedirectImportCreate",
    "urlRedirectImportSubmit",
    "urlRedirectUpdate",
  ],
}
`;

exports[`GraphQL operation coverage > snapshots introspected Admin GraphQL mutations that are not formally supported yet 1`] = `
[
  "appPurchaseOneTimeCreate",
  "appRevokeAccessScopes",
  "appSubscriptionCancel",
  "appSubscriptionCreate",
  "appSubscriptionLineItemUpdate",
  "appSubscriptionTrialExtend",
  "appUninstall",
  "appUsageRecordCreate",
  "backupRegionUpdate",
  "bulkOperationRunMutation",
  "bulkOperationRunQuery",
  "bulkProductResourceFeedbackCreate",
  "collectionAddProductsV2",
  "combinedListingUpdate",
  "companiesDelete",
  "companyAddressDelete",
  "companyAssignCustomerAsContact",
  "companyAssignMainContact",
  "companyContactAssignRole",
  "companyContactAssignRoles",
  "companyContactCreate",
  "companyContactDelete",
  "companyContactRemoveFromCompany",
  "companyContactRevokeRole",
  "companyContactRevokeRoles",
  "companyContactsDelete",
  "companyContactSendWelcomeEmail",
  "companyContactUpdate",
  "companyCreate",
  "companyDelete",
  "companyLocationAssignAddress",
  "companyLocationAssignRoles",
  "companyLocationAssignStaffMembers",
  "companyLocationCreate",
  "companyLocationDelete",
  "companyLocationRemoveStaffMembers",
  "companyLocationRevokeRoles",
  "companyLocationsDelete",
  "companyLocationTaxSettingsUpdate",
  "companyLocationUpdate",
  "companyRevokeMainContact",
  "companyUpdate",
  "consentPolicyUpdate",
  "customerPaymentMethodCreateFromDuplicationData",
  "customerPaymentMethodCreditCardCreate",
  "customerPaymentMethodCreditCardUpdate",
  "customerPaymentMethodGetDuplicationData",
  "customerPaymentMethodGetUpdateUrl",
  "customerPaymentMethodPaypalBillingAgreementCreate",
  "customerPaymentMethodPaypalBillingAgreementUpdate",
  "customerPaymentMethodRemoteCreate",
  "customerPaymentMethodRevoke",
  "delegateAccessTokenCreate",
  "delegateAccessTokenDestroy",
  "deliveryCustomizationActivation",
  "deliveryCustomizationCreate",
  "deliveryCustomizationDelete",
  "deliveryCustomizationUpdate",
  "deliveryPromiseParticipantsUpdate",
  "deliveryPromiseProviderUpsert",
  "deliverySettingUpdate",
  "discountAutomaticAppCreate",
  "discountAutomaticAppUpdate",
  "discountAutomaticBulkDelete",
  "discountCodeAppCreate",
  "discountCodeAppUpdate",
  "discountCodeBulkActivate",
  "discountCodeBulkDeactivate",
  "discountCodeBulkDelete",
  "discountCodeRedeemCodeBulkDelete",
  "discountRedeemCodeBulkAdd",
  "disputeEvidenceUpdate",
  "eventBridgeServerPixelUpdate",
  "fileAcknowledgeUpdateFailed",
  "flowGenerateSignature",
  "flowTriggerReceive",
  "fulfillmentConstraintRuleCreate",
  "fulfillmentConstraintRuleDelete",
  "fulfillmentConstraintRuleUpdate",
  "fulfillmentOrderClose",
  "fulfillmentOrderLineItemsPreparedForPickup",
  "fulfillmentOrderMerge",
  "fulfillmentOrderReschedule",
  "fulfillmentOrderSplit",
  "fulfillmentOrdersSetFulfillmentDeadline",
  "inventoryTransferCancel",
  "inventoryTransferCreate",
  "inventoryTransferCreateAsReadyToShip",
  "inventoryTransferDelete",
  "inventoryTransferDuplicate",
  "inventoryTransferEdit",
  "inventoryTransferMarkAsReadyToShip",
  "inventoryTransferRemoveItems",
  "inventoryTransferSetItems",
  "locationLocalPickupDisable",
  "locationLocalPickupEnable",
  "marketingActivityCreate",
  "marketingActivityUpdate",
  "menuCreate",
  "menuDelete",
  "menuUpdate",
  "mobilePlatformApplicationCreate",
  "mobilePlatformApplicationDelete",
  "mobilePlatformApplicationUpdate",
  "orderDelete",
  "orderEditAddCustomItem",
  "orderEditAddLineItemDiscount",
  "orderEditAddShippingLine",
  "orderEditRemoveDiscount",
  "orderEditRemoveShippingLine",
  "orderEditUpdateDiscount",
  "orderEditUpdateShippingLine",
  "orderRiskAssessmentCreate",
  "paymentReminderSend",
  "paymentTermsCreate",
  "paymentTermsDelete",
  "paymentTermsUpdate",
  "privacyFeaturesDisable",
  "productBundleCreate",
  "productBundleUpdate",
  "productFeedCreate",
  "productFeedDelete",
  "productFullSync",
  "productJoinSellingPlanGroups",
  "productLeaveSellingPlanGroups",
  "productOptionsReorder",
  "productVariantAppendMedia",
  "productVariantDetachMedia",
  "productVariantJoinSellingPlanGroups",
  "productVariantLeaveSellingPlanGroups",
  "productVariantRelationshipBulkUpdate",
  "pubSubServerPixelUpdate",
  "removeFromReturn",
  "returnApproveRequest",
  "returnDeclineRequest",
  "returnProcess",
  "reverseDeliveryCreateWithShipping",
  "reverseDeliveryShippingUpdate",
  "reverseFulfillmentOrderDispose",
  "savedSearchCreate",
  "savedSearchDelete",
  "savedSearchUpdate",
  "scriptTagCreate",
  "scriptTagDelete",
  "scriptTagUpdate",
  "sellingPlanGroupAddProducts",
  "sellingPlanGroupAddProductVariants",
  "sellingPlanGroupCreate",
  "sellingPlanGroupDelete",
  "sellingPlanGroupRemoveProducts",
  "sellingPlanGroupRemoveProductVariants",
  "sellingPlanGroupUpdate",
  "serverPixelCreate",
  "serverPixelDelete",
  "shippingPackageDelete",
  "shippingPackageMakeDefault",
  "shippingPackageUpdate",
  "shopifyPaymentsPayoutAlternateCurrencyCreate",
  "shopResourceFeedbackCreate",
  "storefrontAccessTokenCreate",
  "storefrontAccessTokenDelete",
  "subscriptionBillingAttemptCreate",
  "subscriptionBillingCycleBulkCharge",
  "subscriptionBillingCycleBulkSearch",
  "subscriptionBillingCycleCharge",
  "subscriptionBillingCycleContractDraftCommit",
  "subscriptionBillingCycleContractDraftConcatenate",
  "subscriptionBillingCycleContractEdit",
  "subscriptionBillingCycleEditDelete",
  "subscriptionBillingCycleEditsDelete",
  "subscriptionBillingCycleScheduleEdit",
  "subscriptionBillingCycleSkip",
  "subscriptionBillingCycleUnskip",
  "subscriptionContractActivate",
  "subscriptionContractAtomicCreate",
  "subscriptionContractCancel",
  "subscriptionContractCreate",
  "subscriptionContractExpire",
  "subscriptionContractFail",
  "subscriptionContractPause",
  "subscriptionContractProductChange",
  "subscriptionContractSetNextBillingDate",
  "subscriptionContractUpdate",
  "subscriptionDraftCommit",
  "subscriptionDraftDiscountAdd",
  "subscriptionDraftDiscountCodeApply",
  "subscriptionDraftDiscountRemove",
  "subscriptionDraftDiscountUpdate",
  "subscriptionDraftFreeShippingDiscountAdd",
  "subscriptionDraftFreeShippingDiscountUpdate",
  "subscriptionDraftLineAdd",
  "subscriptionDraftLineRemove",
  "subscriptionDraftLineUpdate",
  "subscriptionDraftUpdate",
  "themeCreate",
  "themeDelete",
  "themeFilesCopy",
  "themeFilesDelete",
  "themeFilesUpsert",
  "themePublish",
  "themeUpdate",
  "urlRedirectBulkDeleteAll",
  "urlRedirectBulkDeleteByIds",
  "urlRedirectBulkDeleteBySavedSearch",
  "urlRedirectBulkDeleteBySearch",
  "urlRedirectCreate",
  "urlRedirectDelete",
  "urlRedirectImportCreate",
  "urlRedirectImportSubmit",
  "urlRedirectUpdate",
  "webPixelCreate",
  "webPixelDelete",
  "webPixelUpdate",
  "webPresenceDelete",
]
`;
